--- a/eElectronics/eElectronics.csproj
+++ b/eElectronics/eElectronics.csproj
@@ -153,6 +153,7 @@
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
     <Content Include="Views\Product\Index.cshtml" />
+    <Content Include="Views\Shared\_ProductPartialView.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
